new file:   assets/js/script.js 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.6.0/css/sharp-light.css">
 
 </head>
-<body>
+<body id="page-top">
 
-<nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm scrollTo" id="mainNav">
     <div class="container px-5">
         <a class="navbar-brand fw-bold" href="#page-top">Age of Empires IV Mobile</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -294,5 +294,6 @@
 </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
